[package]
name = "gtfs-rt"
description = "Read, write, and manipulate GTFS-Realtime data"
version = "0.2.0"
authors = ["Erin Moon <erin@hashbang.sh>"]
license = "MIT AND Apache-2.0"
repository = "https://github.com/barzamin/gtfs-rt"

edition = "2018"

[badges]
maintenance = { status = "experimental" }

[dependencies]
prost = "0.8"
prost-derive = "0.8"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
prost-build = "0.4"
