[package]
name = "gtfs-rt"
description = "Read, write, and manipulate GTFS-Realtime data"
version = "0.4.0"
authors = ["Erin Moon <erin@hecke.rs>"]
license = "MIT AND Apache-2.0"
repository = "https://github.com/barzamin/gtfs-rt"

edition = "2018"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
prost = "0.12"
prost-derive = "0.12"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
prost-build = {git = "https://github.com/lolpro11/prost-rs/"}
